wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_uncategorized_field.stderr
error: enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_on_uncategorized_field.rs:6:5
  |
6 |     MyError,
  |     ^^^^^^^
