wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_uncategorized_field.rs
use wallet_common::error_category::ErrorCategory;

#[derive(ErrorCategory)]
#[allow(dead_code)]
enum Error {
    MyError,
}

fn main() {}
